--- a/modules/reprotool.ide/intro/quickTutorial.html
+++ b/modules/reprotool.ide/intro/quickTutorial.html
@@ -45,8 +45,8 @@ Transitional//EN" "DTD/xhtml1-transitional.dtd">
 		
 		<p>
 			In every <em>Reprotool</em> project, there is already a set of predefined annotations that
-			you can use. You can, however, define new annotations. The annotaions in <em>Reprotool</em>
-			projects must adhere to some rules that are defined in the projects as a set of
+			you can use. You can, however, define new annotations. The annotaions in a <em>Reprotool</em>
+			project must adhere to some rules that are defined in the project as a set of
 			<em>temporal logic formulas</em>.
 			The predefined annotations already have some predefined default
 			behaviour. One of the predefined annotations is the <b><i>create</i></b> annotation. One
