quick tutorial in welcome page updated.

--- a/modules/reprotool.ide/intro/quickTutorial.html
+++ b/modules/reprotool.ide/intro/quickTutorial.html
@@ -15,11 +15,11 @@ Transitional//EN" "DTD/xhtml1-transitional.dtd">
 		<p>
 			<ol>
 			<li>Select the <b><i>File / New / Example...</i></b> command from the main menu.</li>
-			<li>Now choose the <b>Reprotool example projects</b> wizard.</li>
+			<li>Now select the <b>Reprotool example projects</b> wizard and click <b><i>Next</i></b>.</li>
 			<li>Click <b>Finish</b>.</li>
 			</ol>
 			
-			Two <em>Reprotool</em> example projects should now be installed in your workspace.
+			The <em>Reprotool</em> example projects should now be installed in your workspace.
 		</p>
 		
 		<h4>Familiarise yourself with the <em>Citimap example</em> project.</h4>
@@ -46,7 +46,7 @@ Transitional//EN" "DTD/xhtml1-transitional.dtd">
 		<p>
 			In every <em>Reprotool</em> project, there is already a set of predefined annotations that
 			you can use. You can, however, define new annotations. The annotaions in a <em>Reprotool</em>
-			project must adhere to some rules that are defined in the project as a set of
+			project must adhere to the rules that are defined in the project as a set of
 			<em>temporal logic formulas</em>.
 			The predefined annotations already have some predefined default
 			behaviour. One of the predefined annotations is the <b><i>create</i></b> annotation. One
