reprotool overview welcome page filled with text

--- a/modules/reprotool.ide/intro/overview.html
+++ b/modules/reprotool.ide/intro/overview.html
@@ -8,6 +8,25 @@ Transitional//EN" "DTD/xhtml1-transitional.dtd">
 	</head>
 	<body>
 		<h3>ReProTool overview</h3>
-		<p>Overview text goes here.</p>
+		<p>
+			<b><i>Reprotool</i></b> is an interactive environment for specifying use-cases integrated
+			into the <em>Eclipse</em> platform. It integrates linguistic tools that provide support
+			for <em>linguistic analysis</em> of individual <em>use-case steps</em> or whole <em>
+			use-cases</em>.
+		</p>
+		<p>
+			<b><i>Reprotool</i></b> supports generation of verification models that is driven by <em>annotations</em>
+			attached to individual <em>use-case steps.</em> These models can be easily verified within
+			the <em>Reprotool environment</em> using the integrated <em>NuSMV model checker</em>.
+			<em>Reprotool</em> allows advanced users to fine-tune the model verification process by
+			creating custom annotations and specifying their semantics in the form of <em>temporal
+			logic formulas</em>. 
+		</p>
+		
+		<p>
+			<b><i>Reprotool</i></b> provides support for visualising the information collected during the
+			<em>linguistic analysis</em> phase in the form of <em>Class</em> and <em>Use-case UML
+			diagrams</em>. 
+		</p>
 	</body>
 </html>
